--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
 <html lang="">
+  <head>
+    <meta charset="utf-8">
+    <!-- ... 其他头部信息 ... -->
+  </head>
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
