--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
 <html lang="">
-  <head>
-    <meta charset="utf-8">
-    <!-- ... 其他头部信息 ... -->
-  </head>
-  <body>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <!-- ... 其他头部信息 ... -->
+</head>
+
+<body>
+  <div id="app"></div>
+  <!-- built files will be auto injected -->
+</body>
+<!-- 解决逆地理编码，根据经纬度获取地址信息 -->
+<!-- <script type="text/javascript">
+  window._AMapSecurityConfig = {
+    securityJsCode: '你的安全密钥', //所申请的安全密钥 注意这是安全密钥而不是key
+  }
+</script> -->
+<!-- <script src="https://webapi.amap.com/maps?v=1.4.15&key=56b9708e75d5e27739c4b10a5b6d24aa"></script> -->
+
 </html>
